--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "font-awesome": "^4.7.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
+    "react-bootstrap-table": "^4.3.1",
     "react-chartjs-2": "^2.7.2",
     "react-dom": "^16.4.1",
     "react-loadable": "^5.4.0",
